Archive2/f3/34ea5eef0d0c30/output
+ clang++ -std=c++11 -O0 -Wall -pedantic main.cpp
main.cpp:57:23: error: invalid operands to binary expression ('const char *' and 'const char *')
                        return date.c_str()+" "+format.c_str();
                               ~~~~~~~~~~~~^~~~
1 error generated.
